# zed-arturo

./: .gitignore  Cargo.toml  LICENSE  README.md  Rebuild.md  build-embedded.bat  build-embedded.ps1  build-embedded.sh  bundle.js  extension.toml  package-lock.json
.github/workflows/: build-kernel.yml
arturo-kernel/: Cargo.toml  README.md  install.bat  install.sh
arturo-kernel/kernelspec/: kernel.json
arturo-kernel/src/: main.rs
language-server/: .gitignore  PHASE2_INTEGRATION.js  README.md  bundle.js  package-lock.json  package.json  seed-cache.json  server.js  webpack.config.js
language-server/lib/: completion-ranker.js  nim-parser.js  signature-indexer.js  workspace-indexer.js
languages/arturo/: brackets.scm  config.toml  highlights.scm  outline.scm  snippets.json  tags.scm
src/: lib-debug.rs  lib-embedded.rs  lib.rs
