[package]
name = "arturo-kernel"
version = "0.1.0"
edition = "2021"
description = "Jupyter kernel for the Arturo programming language"

[[bin]]
name = "arturo-kernel"
path = "src/main.rs"

[dependencies]
# ZeroMQ — same crate used by v-kernel, bundles libzmq on Windows (no system dep needed)
zmq = "0.10"

# JSON serialisation for Jupyter wire protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HMAC-SHA256 message signing (required by Jupyter wire protocol)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUIDs for message IDs and session IDs
uuid = { version = "1", features = ["v4"] }

# Timestamp for message headers
chrono = { version = "0.4", features = ["clock"] }

# Error handling
anyhow = "1"

# Platform signal/process APIs for interrupt_request handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
strip = true
opt-level = 3
